--- a/src/main/resources/code/kalkulator_czaspracyfrezarki/MainScreen.fxml
+++ b/src/main/resources/code/kalkulator_czaspracyfrezarki/MainScreen.fxml
@@ -2,36 +2,44 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="621.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="code.kalkulator_czaspracyfrezarki.MainController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="662.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="code.kalkulator_czaspracyfrezarki.MainController">
    <children>
       <Pane prefHeight="372.0" prefWidth="600.0">
          <children>
-            <Label layoutX="27.0" layoutY="18.0" text="Wybierz materiał:" />
-            <Button layoutX="170.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Stal" />
-            <Button layoutX="296.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Aluminium" />
-            <Button layoutX="424.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Żeliwo" />
-            <TextField layoutX="170.0" layoutY="55.0" prefHeight="25.0" prefWidth="176.0" />
-            <Label layoutX="27.0" layoutY="59.0" text="Wybrano materiał:" />
-            <Label layoutX="27.0" layoutY="99.0" text="Wybierz narzędzie:" />
-            <Button layoutX="170.0" layoutY="95.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Głowica 25 HCF" />
-            <Button layoutX="296.0" layoutY="95.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Głowica 40 SDKT" />
-            <Button layoutX="424.0" layoutY="95.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Frez 16 VHM" />
-            <Label layoutX="27.0" layoutY="142.0" text="Wybrano narzędzie:" />
-            <TextField layoutX="170.0" layoutY="138.0" prefHeight="25.0" prefWidth="176.0" />
-            <ListView layoutX="171.0" layoutY="178.0" prefHeight="96.0" prefWidth="200.0" />
-            <Label layoutX="27.0" layoutY="178.0" text="Parametry narzędzia:" />
-            <Label layoutX="27.0" layoutY="302.0" prefHeight="17.0" prefWidth="117.0" text="Podaj długość obrysu:" />
-            <TextField layoutX="171.0" layoutY="298.0" />
-            <Label layoutX="27.0" layoutY="360.0" text="Podaj głębokość obrysu:" />
-            <TextField layoutX="171.0" layoutY="356.0" />
-            <Label layoutX="27.0" layoutY="422.0" text="Czas obróbki:" />
-            <TextField layoutX="171.0" layoutY="418.0" />
+            <Label layoutX="33.0" layoutY="98.0" text="Wybierz materiał:" />
+            <Button layoutX="176.0" layoutY="94.0" mnemonicParsing="false" onAction="#wyborStal" prefHeight="25.0" prefWidth="116.0" text="Stal" />
+            <Button layoutX="302.0" layoutY="94.0" mnemonicParsing="false" onAction="#wyborAluminium" prefHeight="25.0" prefWidth="116.0" text="Aluminium" />
+            <Button layoutX="430.0" layoutY="94.0" mnemonicParsing="false" onAction="#wyborZeliwo" prefHeight="25.0" prefWidth="116.0" text="Żeliwo" />
+            <TextField fx:id="textField1" layoutX="176.0" layoutY="135.0" prefHeight="25.0" prefWidth="176.0" />
+            <Label layoutX="33.0" layoutY="139.0" text="Wybrano materiał:" />
+            <Label layoutX="33.0" layoutY="179.0" text="Wybierz narzędzie:" />
+            <Button layoutX="176.0" layoutY="175.0" mnemonicParsing="false" onAction="#wyborG25" prefHeight="25.0" prefWidth="116.0" text="Głowica 25 HCF" />
+            <Button layoutX="302.0" layoutY="175.0" mnemonicParsing="false" onAction="#wyborG40" prefHeight="25.0" prefWidth="116.0" text="Głowica 40 SDKT" />
+            <Button layoutX="430.0" layoutY="175.0" mnemonicParsing="false" onAction="#wyborF16" prefHeight="25.0" prefWidth="116.0" text="Frez 16 VHM" />
+            <Label layoutX="33.0" layoutY="222.0" text="Wybrano narzędzie:" />
+            <TextField fx:id="textField2" layoutX="176.0" layoutY="218.0" prefHeight="25.0" prefWidth="176.0" />
+            <Label layoutX="33.0" layoutY="258.0" text="Parametry narzędzia:" />
+            <Label layoutX="33.0" layoutY="411.0" prefHeight="17.0" prefWidth="117.0" text="Podaj długość obrysu:" />
+            <TextField fx:id="textField3" layoutX="177.0" layoutY="407.0" onAction="#dlugoscObrysu" />
+            <Label layoutX="33.0" layoutY="469.0" text="Podaj głębokość obrysu:" />
+            <TextField fx:id="textField4" layoutX="177.0" layoutY="465.0" onAction="#glebokoscObrysu" />
+            <Label layoutX="33.0" layoutY="594.0" text="Czas obróbki:" />
+            <TextField fx:id="textField5" layoutX="177.0" layoutY="590.0" />
+            <TextArea fx:id="textArea1" layoutX="177.0" layoutY="258.0" prefHeight="135.0" prefWidth="390.0" />
+            <Button layoutX="176.0" layoutY="530.0" mnemonicParsing="false" onAction="#obliczCzas" text="Oblicz czas obróbki" />
+            <Label layoutX="192.0" layoutY="14.0" prefHeight="25.0" prefWidth="268.0" text="Kalkulator - Czas Pracy Frezarki ">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="label99" layoutX="220.0" layoutY="440.0" text="długość  obrysu: " />
+            <Label fx:id="label100" layoutX="221.0" layoutY="500.0" text="głębokość obrysu: " />
          </children>
       </Pane>
    </children>
